# juris-pro-ia

./: .dockerignore  .env.example  .env.lexai  .gitignore  ANALISE_ARQUITETURAL.md  Dockerfile  ENTREGAS_ANALISE.md  README.md  SETUP.md  SPRINTS.md  conftest.py  docker-compose.yml  pytest.ini  requirements.txt
api/: __init__.py  config.py  database.py  dependencies.py  main.py  worker.py
apps/api/: Dockerfile  pyproject.toml
apps/api/lexai/: __init__.py  config.py  db.py  main.py
apps/api/lexai/middleware/: __init__.py  security.py
apps/api/lexai/models/: __init__.py  chat.py
apps/api/lexai/routers/: __init__.py  chat.py  health.py
apps/api/lexai/services/: __init__.py  chat_history.py  cohere_api.py  gemini_service.py  rag_prompt.py  ui_message.py  vector_rag.py
apps/api/tests/: test_lexai_rag_happy_path.py
notebooks/: 01_ner_juridico.py  02_classificacao_tipo.py  03_predicao_ganho.py  04_sumarizacao.py  05_embeddings_similaridade.py  06_analise_risco.py  07_honorarios_estimativa.py  08_ingest_qdrant.py
schemas/: analysis-response.schema.json
scripts/: export_datajud.py  fetch_datajud.py  import_qdrant.py  ingest_casos.py  ingest_jurisprudencia.py  prepare_clause_dataset.py  processo_teste.txt  seed_cases.py  test_integration.py  train_clause_classifier.py
tasks/: 00-overview.md  01-datajud-base.md  02-contract-v2.md  03-error-contract.md  04-analysis-modes.md  05-trace-cost-versioning.md  06-final-opinion.md  07-worker-queue.md  08-tests-quality.md
tests/: test_analyze_http_integration.py  test_async_jobs.py  test_counter_arguments.py  (+7 more)
(+72 files in other folders)
